Boardgame-Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress
  namespace: boardgame
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing  # Use "internal" for internal ALB
    alb.ingress.kubernetes.io/target-type: ip  # Use "instance" for EC2 instance target type
    alb.ingress.kubernetes.io/group-name: my-java-group
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardgame-svc
            port:
              number: 8080
